fix: Dark mode for modals, remove fade hack

--- a/web/style/app.scss
+++ b/web/style/app.scss
@@ -25,12 +25,6 @@ body {
   }
 }
 
-// HACK: Work around dialog not showing up
-// ref: https://github.com/shlomiassaf/angular2-modal/issues/280
-.fade.in {
-  opacity: 1;
-}
-
 .modal.in .modal-dialog {
   -webkit-transform: translate(0, 0);
   -o-transform: translate(0, 0);
